--- a/Blog/Views/Home/_comment.cshtml
+++ b/Blog/Views/Home/_comment.cshtml
@@ -6,13 +6,13 @@
     if (comment.ReplyId == null)
     {
         <div class="col-md-3">
-            <p>@comment.CommentContent</p>
+            <p>@comment.CommentBody</p>
         </div>
     }
     else
     {
         <div class="col-md-3 col-md-offset-1">
-            <p>@comment.CommentContent</p>
+            <p>@comment.CommentBody</p>
         </div>
     }
 }
