added comments ajax

--- a/Blog/Views/Admin/Index.cshtml
+++ b/Blog/Views/Admin/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
     ViewBag.Title = "Admin";
-   
 }
-<h2>Admin Page</h2>
-<ul>
-    <li class="btn"><a href="/admin/newpost">New Post</a></li>
-    <li class="btn"><a href="/admin/newuser">New User</a></li>
-    <li class="btn"><a href="/admin/newauthor">New Author</a></li>
-</ul>
+ <h2>Admin Page</h2>
+<div class="row">
+   
+    <ul>
+        <li class="btn btn-info btn-lg"><a href="/admin/newpost">New Post</a></li>
+        <li class="btn btn-info btn-lg"><a href="/admin/newuser">New User</a></li>
+        <li class="btn btn-info btn-lg"><a href="/admin/newauthor">New Author</a></li>
+    </ul>
+</div>
